--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/Number=7.svg" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Amr Refaey | Frontend Web Developer</title>
+    <title>Amr Refaei | Frontend Web Developer</title>
   </head>
   <body>
     <div id="root"></div>
